tests/failures/no_routes.stderr
error: No methods defined in your files!
       Ensure that at least one `pub async fn` named after an HTTP verb is defined. (e.g. get, post, put, delete)
 --> tests/failures/no_routes.rs:6:1
  |
6 | #[folder_router("../../../../tests/failures/no_routes/route.rs", AppState)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `folder_router` (in Nightly builds, run with -Z macro-backtrace for more info)
